--- a/academie.html
+++ b/academie.html
@@ -28,21 +28,21 @@
     "serviceType": "Formation et coaching esport éducatif"
   }
   </script>
-<link href="assets/css/styles.css" rel="stylesheet"/>
+
 <link href="assets/images/Ludus-Mentis-transparent.png" rel="icon" type="image/png"/>
 <script src="https://cdn.tailwindcss.com"></script><link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css"/><script defer="True" src="assets/js/i18n.js"></script></head>
 <body><a class="sr-only focus:not-sr-only focus:btn focus:btn-primary m-2" href="#main">Aller au contenu principal</a>
 <!-- Google Tag Manager (noscript) -->
-<noscript><iframe height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V" style="display:none;visibility:hidden" width="0"></iframe></noscript>
+<noscript><iframe class="" height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V" style="display:none;visibility:hidden" width="0"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 <div id="header"></div>
-<main class="container" id="main">
+<main class="container mx-auto px-4 py-8 space-y-8" id="main">
 <section class="section hero">
-<h1>L'académie : bien plus que du jeu vidéo</h1>
+<h1 class="text-4xl md:text-5xl font-bold">L'académie : bien plus que du jeu vidéo</h1>
 <p>Notre académie est un espace d'exploration où le jeu devient un prétexte pour grandir. Conçu pour les <strong>jeunes de 10 à 15 ans</strong>, notre programme unique tisse ensemble jeu coopératif, ateliers de développement personnel et activités créatives pour une expérience riche et équilibrée.</p>
 </section>
-<section class="section card">
-<h2>Le déroulé d'une séance en 4 temps (2 heures)</h2>
+<section class="section card"><div class="card-body prose max-w-none">
+<h2 class="text-3xl font-bold mt-2">Le déroulé d'une séance en 4 temps (2 heures)</h2>
 <p>Pour être efficace, notre pédagogie s'appuie sur une structure claire qui complète le cycle d'apprentissage par l'expérience. Voici le déroulé précis de nos sessions de 120 minutes :</p>
 <p><strong>Temps 1 : Accueil et mise en condition (10 min)</strong></p>
 <ul>
@@ -63,9 +63,9 @@
 <ul>
 <li>Cercle de clôture où chaque jeune exprime ce qu'il a appris. C'est le moment de valoriser les efforts et les progrès de chacun avant de se quitter.</li>
 </ul>
-</section>
-<section class="section card">
-<h2>Nos piliers pédagogiques : ce qui fait notre différence</h2>
+</div></section>
+<section class="section card"><div class="card-body prose max-w-none">
+<h2 class="text-3xl font-bold mt-2">Nos piliers pédagogiques : ce qui fait notre différence</h2>
 <ul>
 <li>
 <strong>La pédagogie par l'action :</strong> On apprend mieux en faisant. Le jeu n'est pas une récompense, c'est le support de l'apprentissage.
@@ -80,14 +80,14 @@
 <strong>L'implication des parents :</strong> Vous faites partie de l'aventure. Des rencontres et des bilans réguliers sont organisés pour assurer une parfaite transparence et aligner nos efforts avec les vôtres.
         </li>
 </ul>
-</section>
-<section class="section card" style="text-align:center;">
-<h2>Prêt à rejoindre l'aventure ?</h2>
+</div></section>
+<section class="section card text-center"><div class="card-body prose max-w-none">
+<h2 class="text-3xl font-bold mt-2">Prêt à rejoindre l'aventure ?</h2>
 <p>Les places sont limitées pour garantir un accompagnement de qualité.
             <br/>
             Contactez-nous pour toute question ou pour procéder à une demande d'inscription.</p>
 <a class="btn btn-primary" href="contact.html">Je veux plus d'infos</a>
-</section>
+</div></section>
 </main>
 <div id="footer"></div>
 <script src="assets/js/include.js"></script>
