--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
     "serviceType": "Formation et coaching esport éducatif"
   }
   </script>
-<link href="assets/css/styles.css" rel="stylesheet"/>
+
 <link href="assets/images/Ludus-Mentis-transparent.png" rel="icon" type="image/png"/>
 <style>
     /* Enhanced form styles */
@@ -219,29 +219,29 @@
   </style>
 <script src="https://cdn.tailwindcss.com"></script><link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css"/><script defer="True" src="assets/js/i18n.js"></script></head>
 <body><a class="sr-only focus:not-sr-only focus:btn focus:btn-primary m-2" href="#main">Aller au contenu principal</a>
-<noscript><iframe height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V" style="display:none;visibility:hidden" width="0"></iframe></noscript>
+<noscript><iframe class="" height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V" style="display:none;visibility:hidden" width="0"></iframe></noscript>
 <div id="header"></div>
-<main class="container" id="main">
+<main class="container mx-auto px-4 py-8 space-y-8" id="main">
 <section class="section hero">
-<h1>Préparez dès maintenant la rentrée 2026 !</h1>
+<h1 class="text-4xl md:text-5xl font-bold">Préparez dès maintenant la rentrée 2026 !</h1>
 <p>Notre académie ouvrira ses portes en <strong>janvier 2026</strong>. Posez vos questions, demandez une présentation ou réservez votre place dès maintenant.</p>
 </section>
-<section class="section card">
-<h2>Comment souhaitez-vous être contacté ?</h2>
+<section class="section card"><div class="card-body prose max-w-none">
+<h2 class="text-3xl font-bold mt-2">Comment souhaitez-vous être contacté ?</h2>
 <div class="contact-options">
 <div class="contact-card" data-type="info">
 <span class="icon">📋</span>
-<h3>Demande d'informations</h3>
+<h3 class="text-xl font-semibold mt-2">Demande d'informations</h3>
 <p>Questions générales sur le programme, la pédagogie, les horaires...</p>
 </div>
 <div class="contact-card" data-type="presentation">
 <span class="icon">👥</span>
-<h3>Présentation personnalisée</h3>
+<h3 class="text-xl font-semibold mt-2">Présentation personnalisée</h3>
 <p>Rencontre pour découvrir notre approche et rencontrer l'équipe</p>
 </div>
 <div class="contact-card" data-type="reservation">
 <span class="icon">🎯</span>
-<h3>Pré-inscription</h3>
+<h3 class="text-xl font-semibold mt-2">Pré-inscription</h3>
 <p>Réserver une place pour votre enfant (ouverture janvier 2026)</p>
 </div>
 </div>
@@ -304,14 +304,14 @@
 <strong>Merci !</strong> Votre message a bien été envoyé. Nous vous répondrons dans les 48h.
         </div>
 </form>
-<p style="margin-top: 2em; color: #876b4c; text-align: center;">
+<p class="text-center mt-8">
         Vous préférez nous écrire directement ? 
         <a href="mailto:info@ludusmentis.be">info@ludusmentis.be</a>
 </p>
-</section>
+</div></section>
 </main>
 <div class="floating-cta">
-<a class="quick-contact" href="#contactForm">
+<a class="quick-contact btn btn-primary" href="#contactForm">
 <span>📞</span>
 <span>Contact</span>
 </a>
