--- a/enjeux.html
+++ b/enjeux.html
@@ -10,21 +10,21 @@
 <title>Enjeux des Jeux Vidéo : Écrans, Isolement et Solutions | Ludus Mentis</title>
 <meta content="Analyse des enjeux liés aux jeux vidéo chez les jeunes : temps d'écran, gestion des émotions, risques. Découvrez comment notre approche encadrée apporte des solutions concrètes." name="description"/>
 <meta content="enjeux jeux vidéo, temps d'écran adolescent, gaming disorder, cyberharcèlement, solution parents, équilibre numérique" name="keywords"/>
-<link href="assets/css/styles.css" rel="stylesheet"/>
+
 <link href="assets/images/Ludus-Mentis-transparent.png" rel="icon" type="image/png"/>
 <script src="https://cdn.tailwindcss.com"></script><link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css"/><script defer="True" src="assets/js/i18n.js"></script></head>
 <body><a class="sr-only focus:not-sr-only focus:btn focus:btn-primary m-2" href="#main">Aller au contenu principal</a>
 <!-- Google Tag Manager (noscript) -->
-<noscript><iframe height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V" style="display:none;visibility:hidden" width="0"></iframe></noscript>
+<noscript><iframe class="" height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V" style="display:none;visibility:hidden" width="0"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 <div id="header"></div>
-<main class="container" id="main">
+<main class="container mx-auto px-4 py-8 space-y-8" id="main">
 <section class="section hero">
-<h1>Le jeu vidéo : une réalité, des enjeux, nos solutions</h1>
+<h1 class="text-4xl md:text-5xl font-bold">Le jeu vidéo : une réalité, des enjeux, nos solutions</h1>
 <p>Le jeu vidéo est aujourd’hui un élément central du quotidien des jeunes. Il constitue une source de plaisir, de créativité et de socialisation, mais il suscite aussi des interrogations légitimes de la part des parents et des éducateurs. Chez Ludus Mentis, nous considérons le jeu non pas comme un problème, mais comme un terrain d’apprentissage et de développement, à condition qu’il soit encadré et réfléchi. Voici notre analyse des grands enjeux, appuyée par des données scientifiques, et les solutions que nous mettons en œuvre.</p>
 </section>
-<section class="section card">
-<h2>Quelques chiffres pour cadrer le débat</h2>
+<section class="section card"><div class="card-body prose max-w-none">
+<h2 class="text-3xl font-bold mt-2">Quelques chiffres pour cadrer le débat</h2>
 <p>Avant d'explorer les enjeux en détail, voici quelques données clés en Europe et en Belgique :</p>
 <ul>
 <li><strong>34 % des adolescents</strong> jouent chaque jour à des jeux vidéo (<a href="#source3">Sciensano, 2023</a>).</li>
@@ -32,9 +32,9 @@
 <li><strong>57 % des adolescents belges (10‑17 ans)</strong> dépassent les 2 heures d’écran recommandées le week‑end (<a href="#source3">Sciensano, 2023</a>).</li>
 <li><strong>12 % des adolescents européens</strong> présentent un risque de « gaming disorder » selon l’OMS (<a href="#source4">ICD‑11, OMS</a>).</li>
 </ul>
-</section>
-<section class="section card">
-<h2>Enjeu n°1 : trouver l’équilibre entre vie numérique et vie réelle</h2>
+</div></section>
+<section class="section card"><div class="card-body prose max-w-none">
+<h2 class="text-3xl font-bold mt-2">Enjeu n°1 : trouver l’équilibre entre vie numérique et vie réelle</h2>
 <p><strong>Le contexte :</strong> l’hyperconnexion est devenue la norme chez les jeunes. Des sessions de plus de 4 heures consécutives concernent un joueur adolescent sur cinq (<a href="#source2">OMS, 2024</a>). Cet usage intensif peut empiéter sur d’autres sphères essentielles : sommeil, activités physiques, vie familiale et scolaires.</p>
 <p><strong>Les risques concrets :</strong> une pratique excessive favorise la sédentarité (<a href="#source7">PLOS ONE, 2022</a>), la fatigue visuelle (<a href="#source6">PMC, 2023</a>) et les troubles du sommeil (<a href="#source8">PubMed, 2024</a>). Le temps consacré aux devoirs ou aux échanges familiaux se réduit, et la concentration peut être affectée.</p>
 <p><strong>La réponse de Ludus Mentis :</strong> nous ne cherchons pas à réduire le temps d’écran de façon arbitraire, mais à en améliorer la qualité.
@@ -44,9 +44,9 @@
 <li><strong>Ateliers de sensibilisation :</strong> discussions sur le sommeil, la nutrition et l’équilibre des activités, pour que les jeunes deviennent acteurs de leur bien-être.</li>
 </ul>
 </p>
-</section>
-<section class="section card">
-<h2>Enjeu n°2 : de l’isolement virtuel à la coopération réelle</h2>
+</div></section>
+<section class="section card"><div class="card-body prose max-w-none">
+<h2 class="text-3xl font-bold mt-2">Enjeu n°2 : de l’isolement virtuel à la coopération réelle</h2>
 <p><strong>Le contexte :</strong> le jeu en ligne est aujourd’hui un espace social majeur. Toutefois, les échanges virtuels peuvent manquer de profondeur et d’empathie. Les comportements toxiques, dont le cyberharcèlement, sont documentés dans les communautés de joueurs (<a href="#source9">EPRS, 2023</a>).</p>
 <p><strong>Les risques concrets :</strong> un jeune peut ressentir de la solitude malgré de nombreuses interactions en ligne, ou s’isoler dans un cercle virtuel au détriment de ses relations physiques. L’exposition répétée à des comportements agressifs ou à de la triche peut fausser sa vision d’une compétition saine (<a href="#source10">Parlement européen, 2023</a>).</p>
 <p><strong>La réponse de Ludus Mentis :</strong> utiliser le jeu comme outil d’apprentissage du vivre-ensemble.
@@ -56,9 +56,9 @@
 <li><strong>Débriefings post‑partie :</strong> cercles de parole inspirés du cycle de Kolb pour analyser stratégies, réussites et tensions, et apprendre à donner/recevoir un feedback constructif.</li>
 </ul>
 </p>
-</section>
-<section class="section card">
-<h2>Enjeu n°3 : apprendre à gagner… et à perdre</h2>
+</div></section>
+<section class="section card"><div class="card-body prose max-w-none">
+<h2 class="text-3xl font-bold mt-2">Enjeu n°3 : apprendre à gagner… et à perdre</h2>
 <p><strong>Le contexte :</strong> le jeu vidéo est un catalyseur d’émotions intenses : joie, frustration, stress. Mal gérées, ces émotions peuvent conduire à des comportements excessifs comme le « ragequit » ou une baisse de l’estime de soi. Jusqu’à 12 % des adolescents présentent un risque de dépendance (<a href="#source4">OMS, 2024</a>).</p>
 <p><strong>Les risques concrets :</strong> au‑delà du « gaming disorder » reconnu par l’OMS, une mauvaise régulation émotionnelle peut détériorer l’ambiance de jeu, créer des conflits familiaux et augmenter l’anxiété.</p>
 <p><strong>La réponse de Ludus Mentis :</strong> offrir un cadre sécurisé pour développer la maîtrise de soi.
@@ -68,9 +68,9 @@
 <li><strong>Fair‑play et maturité :</strong> l’accès aux volets compétitifs repose sur la maturité et le respect, pas uniquement sur le niveau de jeu.</li>
 </ul>
 </p>
-</section>
-<section class="section sources card" id="sources">
-<h2>Pour aller plus loin : sources principales</h2>
+</div></section>
+<section class="section sources card" id="sources"><div class="card-body prose max-w-none">
+<h2 class="text-3xl font-bold mt-2">Pour aller plus loin : sources principales</h2>
 <ol>
 <li id="source1">
       European Commission – Digital Economy and Society Index (DESI) 2024. 
@@ -117,7 +117,7 @@
     <a href="https://link.springer.com/book/10.1007/978-3-031-89557-9" rel="noopener noreferrer" target="_blank">Lien</a>
 </li>
 </ol>
-</section>
+</div></section>
 </main>
 <div id="footer"></div>
 <script src="assets/js/include.js"></script>
