--- a/faq.html
+++ b/faq.html
@@ -10,23 +10,23 @@
 <title>FAQ - Questions Fréquentes sur nos Ateliers | Ludus Mentis</title>
 <meta content="Nos réponses à vos questions : à qui s'adressent nos ateliers, la place de la compétition, comment s'inscrire... Tout ce que les parents doivent savoir." name="description"/>
 <meta content="FAQ, questions fréquentes, parents, compétition esport, inscription, bienveillance" name="keywords"/>
-<link href="assets/css/styles.css" rel="stylesheet"/>
+
 <link href="assets/images/Ludus-Mentis-transparent.png" rel="icon" type="image/png"/>
 <script src="https://cdn.tailwindcss.com"></script><link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css"/><script defer="True" src="assets/js/i18n.js"></script></head>
 <body><a class="sr-only focus:not-sr-only focus:btn focus:btn-primary m-2" href="#main">Aller au contenu principal</a>
 <!-- Google Tag Manager (noscript) -->
-<noscript><iframe height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V" style="display:none;visibility:hidden" width="0"></iframe></noscript>
+<noscript><iframe class="" height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V" style="display:none;visibility:hidden" width="0"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 <div id="header"></div>
-<main class="container" id="main">
-<section class="section card">
-<h1>Foire aux questions</h1>
+<main class="container mx-auto px-4 py-8 space-y-8" id="main">
+<section class="section card"><div class="card-body prose max-w-none">
+<h1 class="text-4xl md:text-5xl font-bold">Foire aux questions</h1>
 <p>Vous trouverez ici les réponses aux questions les plus fréquentes sur notre académie. 
-         Si votre question ne figure pas ici, <a href="contact.html">contactez-nous</a> : 
+         Si votre question ne figure pas ici, <a class="btn btn-primary" href="contact.html">contactez-nous</a> : 
          nous nous ferons un plaisir d’y répondre.</p>
-</section>
-<section class="section card">
-<h2>À qui s’adresse Ludus Mentis ?</h2>
+</div></section>
+<section class="section card"><div class="card-body prose max-w-none">
+<h2 class="text-3xl font-bold mt-2">À qui s’adresse Ludus Mentis ?</h2>
 <p>
         Aux jeunes de <strong>10 à 15 ans</strong>, qu’ils soient passionnés de jeux vidéo, joueurs occasionnels, 
         ou simplement curieux.  
@@ -34,31 +34,31 @@
         des défis et du développement personnel, tandis que les débutants découvrent 
         les bases de la coopération, de la communication et du respect en ligne.
       </p>
-</section>
-<section class="section card">
-<h2>Est-ce qu’il y a de la compétition ?</h2>
+</div></section>
+<section class="section card"><div class="card-body prose max-w-none">
+<h2 class="text-3xl font-bold mt-2">Est-ce qu’il y a de la compétition ?</h2>
 <p>
         Notre priorité est <strong>l’esprit d’équipe</strong> et la progression individuelle.  
         Certains ateliers incluent des défis ludiques ou des tournois internes, mais toujours dans un cadre 
         <em>positif</em> : l’objectif est d’apprendre à gérer la pression, à collaborer et à respecter l’adversaire.  
         Nous voulons former des joueurs capables de gagner… et de perdre, avec le même fair-play.
       </p>
-</section>
-<section class="section card">
-<h2>Comment s’inscrire ?</h2>
+</div></section>
+<section class="section card"><div class="card-body prose max-w-none">
+<h2 class="text-3xl font-bold mt-2">Comment s’inscrire ?</h2>
 <p>
-        Remplissez simplement le <a href="contact.html">formulaire de contact</a> ou envoyez un mail à 
+        Remplissez simplement le <a class="btn btn-primary" href="contact.html">formulaire de contact</a> ou envoyez un mail à 
         <a href="mailto:info@ludusmentis.be">info@ludusmentis.be</a>.  
         Nous reviendrons vers vous rapidement avec les informations sur les prochaines sessions, 
         les places disponibles et les modalités de participation.
       </p>
-</section>
-<section class="section card">
-<h2>Et pour les parents inquiets ?</h2>
+</div></section>
+<section class="section card"><div class="card-body prose max-w-none">
+<h2 class="text-3xl font-bold mt-2">Et pour les parents inquiets ?</h2>
 <p>
        Notre priorité absolue est le développement de l'esprit d'équipe dans un cadre positif. Nous ne nous focalisons pas sur la compétition. Cependant, nous envisageons à terme de proposer une filière plus compétitive, accessible uniquement aux jeunes ayant démontré une maturité, un fair-play et une gestion émotionnelle exemplaires
       </p>
-</section>
+</div></section>
 </main>
 <div id="footer"></div>
 <script src="assets/js/include.js"></script>
