--- a/methodologie.html
+++ b/methodologie.html
@@ -10,17 +10,17 @@
 <title>Méthodologie Pédagogique : Le Cycle de Kolb appliqué au Jeu | Ludus Mentis</title>
 <meta content="Notre méthodologie s'appuie sur le cycle de Kolb pour transformer chaque partie en apprentissage durable. Découvrez notre cadre structuré pour développer les compétences." name="description"/>
 <meta content="méthodologie, pédagogie, cycle de kolb, apprentissage par l'expérience, encadrement, bienveillance" name="keywords"/>
-<link href="assets/css/styles.css" rel="stylesheet"/>
+
 <link href="assets/images/Ludus-Mentis-transparent.png" rel="icon" type="image/png"/>
 <script src="https://cdn.tailwindcss.com"></script><link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css"/><script defer="True" src="assets/js/i18n.js"></script></head>
 <body><a class="sr-only focus:not-sr-only focus:btn focus:btn-primary m-2" href="#main">Aller au contenu principal</a>
 <!-- Google Tag Manager (noscript) -->
-<noscript><iframe height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V" style="display:none;visibility:hidden" width="0"></iframe></noscript>
+<noscript><iframe class="" height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V" style="display:none;visibility:hidden" width="0"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 <div id="header"></div>
-<main class="container" id="main">
-<section class="section card">
-<h1>Notre méthodologie : du jeu à la compétence</h1>
+<main class="container mx-auto px-4 py-8 space-y-8" id="main">
+<section class="section card"><div class="card-body prose max-w-none">
+<h1 class="text-4xl md:text-5xl font-bold">Notre méthodologie : du jeu à la compétence</h1>
 <p>
         Chez Ludus Mentis, nous ne nous contentons pas de faire jouer les jeunes. Nous transformons chaque partie en une opportunité d'apprentissage grâce à un cadre structuré et bienveillant, inspiré des meilleures pratiques pédagogiques.
       </p>
@@ -31,9 +31,9 @@
         <strong>harmonie familiale</strong> (apaiser les tensions liées aux écrans) 
         et <strong>vide structurel</strong> (offrir une alternative éducative numérique en Wallonie).
       </p>
-</section>
-<section class="section card">
-<h2>Le cycle de Kolb : comment le jeu devient apprentissage</h2>
+</div></section>
+<section class="section card"><div class="card-body prose max-w-none">
+<h2 class="text-3xl font-bold mt-2">Le cycle de Kolb : comment le jeu devient apprentissage</h2>
 <p>
         Notre secret réside dans l'application du <strong>cycle de Kolb</strong>, une méthode d'apprentissage en 4 étapes qui transforme une expérience concrète en compétence durable. Voici comment cela fonctionne lors d'une session de jeu :
       </p>
@@ -55,16 +55,16 @@
             L'équipe relance une partie, mais avec une nouvelle stratégie, basée sur la leçon apprise : "Ok, pour cette manche, toi tu gères les cuissons, moi les découpes et on s'annonce les commandes à voix haute". Ils testent leur nouvelle compétence en conditions réelles et constatent leur progression.
       </li></ol>
 <p>Ce cycle, répété à chaque séance, est la clé pour ancrer durablement les compétences de communication, de collaboration et de gestion des émotions.</p>
-</section>
-<section class="section card">
-<h2>Nos engagements concrets</h2>
+</div></section>
+<section class="section card"><div class="card-body prose max-w-none">
+<h2 class="text-3xl font-bold mt-2">Nos engagements concrets</h2>
 <ul>
 <li><strong>Sessions actives :</strong> Alternance de jeux coopératifs, d'exergaming (<em>Ring Fit</em>, <em>Just Dance</em>…) et d'ateliers bien-être (sommeil, nutrition, gestion du stress).</li>
 <li><strong>Pédagogie structurée :</strong> Débriefings guidés en groupe pour transformer chaque partie en apprentissage (cycle de Kolb).</li>
 <li><strong>Charte d’éthique :</strong> Co-construite avec les jeunes, pour ancrer le respect et l’empathie dans chaque interaction.</li>
 <li><strong>Implication parentale :</strong> Rencontres, ateliers, et bilans de progression en fin de module avec les familles.</li>
 </ul>
-</section>
+</div></section>
 </main>
 <div id="footer"></div>
 <script src="assets/js/include.js"></script>
