--- a/concept.html
+++ b/concept.html
@@ -10,21 +10,21 @@
 <title>Notre Concept : Du Jeu Vidéo aux Compétences de Vie | Ludus Mentis</title>
 <meta content="Découvrez notre concept unique : utiliser des jeux vidéo populaires comme Overcooked ou Rocket League pour développer la communication, la collaboration et la gestion des émotions chez les jeunes." name="description"/>
 <meta content="concept pédagogique, jeu vidéo éducatif, soft skills, compétences humaines, esport, apprentissage par le jeu" name="keywords"/>
-<link href="assets/css/styles.css" rel="stylesheet"/>
+
 <link href="assets/images/Ludus-Mentis-transparent.png" rel="icon" type="image/png"/>
 <script src="https://cdn.tailwindcss.com"></script><link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css"/><script defer="True" src="assets/js/i18n.js"></script></head>
 <body><a class="sr-only focus:not-sr-only focus:btn focus:btn-primary m-2" href="#main">Aller au contenu principal</a>
 <!-- Google Tag Manager (noscript) -->
-<noscript><iframe height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V" style="display:none;visibility:hidden" width="0"></iframe></noscript>
+<noscript><iframe class="" height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V" style="display:none;visibility:hidden" width="0"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 <div id="header"></div>
-<main class="container" id="main">
+<main class="container mx-auto px-4 py-8 space-y-8" id="main">
 <section class="section hero">
-<h1>Transformer le plaisir de jouer en compétences pour la vie</h1>
+<h1 class="text-4xl md:text-5xl font-bold">Transformer le plaisir de jouer en compétences pour la vie</h1>
 <p>Chez Ludus Mentis, nous partons d'une conviction simple : la passion des jeunes pour le jeu vidéo est une énergie formidable. plutôt que de la freiner, nous la canalisons. nous avons créé un espace où le jeu devient un puissant levier d'apprentissage, encadré par des professionnels bienveillants.</p>
 </section>
-<section class="section card">
-<h2>Des pixels aux compétences humaines</h2>
+<section class="section card"><div class="card-body prose max-w-none">
+<h2 class="text-3xl font-bold mt-2">Des pixels aux compétences humaines</h2>
 <p>Au-delà des scores et des classements, chaque partie est une occasion de développer des savoir-être essentiels. voici ce que votre enfant apprend concrètement avec nous :</p>
 <ul>
 <li>💬 <strong>Mieux communiquer :</strong> Exprimer ses idées clairement, écouter activement et se coordonner avec ses coéquipiers.</li>
@@ -32,9 +32,9 @@
 <li>🎯 <strong>Développer sa persévérance :</strong> Se fixer des objectifs en équipe, élaborer une stratégie et persévérer pour l'atteindre.</li>
 <li>🫱 <strong>Renforcer l'esprit d'équipe :</strong> S’intégrer à un groupe, faire confiance et mériter la confiance des autres, avec respect et empathie.</li>
 </ul>
-</section>
-<section class="section card">
-<h2>Nos outils pédagogiques : des jeux triés sur le volet</h2>
+</div></section>
+<section class="section card"><div class="card-body prose max-w-none">
+<h2 class="text-3xl font-bold mt-2">Nos outils pédagogiques : des jeux triés sur le volet</h2>
 <p>Tous les jeux ne se valent pas. nous sélectionnons rigoureusement des titres reconnus pour leur potentiel coopératif et éducatif. ce ne sont pas des "jeux éducatifs" classiques, mais de vrais jeux populaires, utilisés comme supports d'apprentissage :</p>
 <ul>
 <li>
@@ -44,22 +44,22 @@
 <strong>Keep Talking and Nobody Explodes :</strong> Le jeu de communication par excellence. Un joueur a la bombe, les autres ont le manuel. L'écoute et la clarté sont une question de survie (virtuelle) !
         </li>
 </ul>
-</section>
-<section class="section card">
-<h2>Comment le jeu devient-il apprentissage ?</h2>
+</div></section>
+<section class="section card"><div class="card-body prose max-w-none">
+<h2 class="text-3xl font-bold mt-2">Comment le jeu devient-il apprentissage ?</h2>
 <p>C'est là que réside notre secret : <strong>l'accompagnement humain</strong>. le jeu n'est que la première étape.</p>
 <p>Chaque session de jeu est suivie d'un <strong>débriefing en groupe</strong>, mené par nos animateurs formés. c'est un moment d'échange où l'on met des mots sur ce qui a été vécu : "comment aurions-nous pu mieux nous organiser ?", "qu'as-tu ressenti à ce moment précis ?". c'est en reliant l'action (le jeu) à la réflexion (le débrief) que les compétences s'ancrent durablement.</p>
-</section>
-<section class="section card">
-<h2>Notre vision : bâtir des champions de la vie, puis de l'esport</h2>
+</div></section>
+<section class="section card"><div class="card-body prose max-w-none">
+<h2 class="text-3xl font-bold mt-2">Notre vision : bâtir des champions de la vie, puis de l'esport</h2>
 <p>Notre première mission est de construire des bases solides : bien-être, confiance en soi et intelligence collective. c'est la vocation de notre académie.</p>
 <p>Dans un second temps, Ludus Mentis ambitionne d'ouvrir une filière esport plus compétitive. mais l'accès à cette filière sera sélectif, non pas sur le niveau de jeu, mais sur les qualités humaines : seuls les jeunes ayant démontré un fair-play exemplaire, une grande maturité et une bonne gestion de leurs émotions pourront y accéder. pour nous, la santé et l'équilibre primeront toujours sur la performance.</p>
-</section>
-<section class="section card" style="text-align:center;">
-<h2>Curieux de voir notre programme en action ?</h2>
+</div></section>
+<section class="section card text-center"><div class="card-body prose max-w-none">
+<h2 class="text-3xl font-bold mt-2">Curieux de voir notre programme en action ?</h2>
 <p>Découvrez en détail comment se déroule un atelier au sein de notre académie.</p>
-<a class="btn btn-primary" href="academie.html">Explorer l'Académie</a>
-</section>
+<a class="btn btn-primary btn-lg" href="academie.html">Explorer l'Académie</a>
+</div></section>
 </main>
 <div id="footer"></div>
 <script src="assets/js/include.js"></script>
