--- a/index.html
+++ b/index.html
@@ -27,36 +27,36 @@
       "areaServed": "Belgique"
     }
     </script>
-<link href="assets/css/styles.css" rel="stylesheet"/>
+
 <link href="assets/images/Ludus-Mentis-transparent.png" rel="icon" type="image/png"/>
 <script src="https://cdn.tailwindcss.com"></script><link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css"/><script defer="True" src="assets/js/i18n.js"></script></head>
 <body><a class="sr-only focus:not-sr-only focus:btn focus:btn-primary m-2" href="#main">Aller au contenu principal</a>
 <!-- Google Tag Manager (noscript) -->
-<noscript><iframe height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V" style="display:none;visibility:hidden" width="0"></iframe></noscript>
+<noscript><iframe class="" height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V" style="display:none;visibility:hidden" width="0"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 <div id="header"></div>
-<main class="container" id="main">
+<main class="container mx-auto px-4 py-8 space-y-8" id="main">
 <section class="section hero">
-<img alt="Logo Ludus Mentis" decoding="async" loading="lazy" src="assets/images/Ludus-Mentis-transparent.png" style="max-width:120px; margin-bottom:1em"/>
-<h1>Et si le jeu vidéo aidait votre enfant à grandir ?</h1>
+<img alt="Logo Ludus Mentis" class="" decoding="async" loading="lazy" src="assets/images/Ludus-Mentis-transparent.png" style="max-width:120px; margin-bottom:1em"/>
+<h1 class="text-4xl md:text-5xl font-bold">Et si le jeu vidéo aidait votre enfant à grandir ?</h1>
 <p>Chez Ludus Mentis, nous transformons la passion du jeu vidéo en un puissant outil de développement personnel. Grâce à notre approche pédagogique unique, votre enfant apprend la communication, la gestion des émotions et l'esprit d’équipe. Pour s'épanouir à l'écran, comme dans la vie de tous les jours.</p>
 </section>
-<section class="section card" id="concept">
-<h2>Des compétences humaines pour le 21<sup>e</sup> siècle</h2>
+<section class="section card" id="concept"><div class="card-body prose max-w-none">
+<h2 class="text-3xl font-bold mt-2">Des compétences humaines pour le 21<sup>e</sup> siècle</h2>
 <p>Notre programme est conçu pour développer les compétences les plus recherchées aujourd’hui : <strong>collaboration, communication, créativité, et résolution de problèmes</strong>.</p>
 <p>Grâce à des ateliers concrets, des jeux coopératifs et des moments d’échange en groupe, nous travaillons toutes ces aptitudes essentielles pour leur avenir.</p>
-</section>
-<section class="section card">
-<h2>Les bénéfices pour votre enfant</h2>
+</div></section>
+<section class="section card"><div class="card-body prose max-w-none">
+<h2 class="text-3xl font-bold mt-2">Les bénéfices pour votre enfant</h2>
 <ul>
 <li><strong>Communication :</strong> Exprimer ses idées clairement et écouter les autres.</li>
 <li><strong>Esprit d’équipe :</strong> Travailler ensemble vers un objectif commun.</li>
 <li><strong>Gestion du stress :</strong> Rester concentré et calme dans les moments clés.</li>
 <li><strong>Confiance en soi :</strong> Valoriser ses talents et oser prendre des initiatives.</li>
 </ul>
-</section>
-<section class="section card">
-<h2>Pourquoi un accompagnement est-il essentiel ?</h2>
+</div></section>
+<section class="section card"><div class="card-body prose max-w-none">
+<h2 class="text-3xl font-bold mt-2">Pourquoi un accompagnement est-il essentiel ?</h2>
 <p>Si le jeu vidéo est une passion pour des millions de jeunes, une pratique non encadrée présente des risques. les chiffres parlent d'eux-mêmes :</p>
 <ul>
 <li>
@@ -66,27 +66,27 @@
 <strong>12 % des jeunes sont considérés à risque de développer une pratique problématique</strong> (gaming disorder) selon l'OMS.
         </li>
 </ul>
-<p style="margin-top: 1.5em;">Notre mission est de transformer ce temps d'écran en une expérience constructive.</p>
-<p style="text-align:center; margin-top:2em;"><a class="btn btn-primary" href="enjeux.html">Voir les chiffres &amp; sources détaillés</a></p>
-</section>
-<section class="section card">
-<h2>Un projet soutenu localement</h2>
+<p class="mt-4">Notre mission est de transformer ce temps d'écran en une expérience constructive.</p>
+<p class="text-center mt-8"><a class="btn btn-primary" href="enjeux.html">Voir les chiffres &amp; sources détaillés</a></p>
+</div></section>
+<section class="section card"><div class="card-body prose max-w-none">
+<h2 class="text-3xl font-bold mt-2">Un projet soutenu localement</h2>
 <p>Ludus Mentis est une initiative locale soutenue par la <strong>commune de walhain</strong> et la <strong>fédération belge d’esport</strong>, portée par des acteurs engagés dans l’éducation, la prévention et l’innovation pédagogique.</p>
-<div style="display: flex; align-items: center; justify-content: center; gap: 2rem; margin-top: 1.5rem; flex-wrap: wrap;">
+<div class="mt-4">
 <a href="https://www.walhain.be/" rel="noopener noreferrer" target="_blank">
-<img alt="Logo de la commune de Walhain" decoding="async" loading="lazy" src="assets/images/logo_walhain.png" style="max-height: 70px; object-fit: contain;"/>
+<img alt="Logo de la commune de Walhain" class="" decoding="async" loading="lazy" src="assets/images/logo_walhain.png" style="max-height: 70px; object-fit: contain;"/>
 </a>
 <a href="https://besf.be/" rel="noopener noreferrer" target="_blank">
-<img alt="Logo de la Fédération Belge d'Esport" decoding="async" loading="lazy" src="assets/images/logo_besf.png" style="max-height: 70px; object-fit: contain;"/>
+<img alt="Logo de la Fédération Belge d'Esport" class="" decoding="async" loading="lazy" src="assets/images/logo_besf.png" style="max-height: 70px; object-fit: contain;"/>
 </a>
 </div>
-<p style="text-align:center; margin-top:2em;"><a class="btn btn-primary" href="academie.html">Découvrir notre académie</a></p>
-</section>
-<section class="section card" style="text-align:center;">
-<h2>Des questions ? parlons-en !</h2>
-<p><a href="faq.html">consultez notre faq</a> ou <a href="contact.html">contactez-nous directement</a>.<br/>
+<p class="text-center mt-8"><a class="btn btn-primary btn-lg" href="academie.html">Découvrir notre académie</a></p>
+</div></section>
+<section class="section card text-center"><div class="card-body prose max-w-none">
+<h2 class="text-3xl font-bold mt-2">Des questions ? parlons-en !</h2>
+<p><a href="faq.html">consultez notre faq</a> ou <a class="btn btn-primary" href="contact.html">contactez-nous directement</a>.<br/>
     nous répondons à toutes vos préoccupations de parent.</p>
-</section>
+</div></section>
 </main>
 <div id="footer"></div>
 <script src="assets/js/include.js"></script>
