--- a/infos-tarifs.html
+++ b/infos-tarifs.html
@@ -10,30 +10,30 @@
 <title>Infos &amp; Tarifs de l'Académie de Jeux Vidéo | Ludus Mentis</title>
 <meta content="Consultez les informations pratiques de nos modules de 7 semaines pour jeunes de 10 à 15 ans. Tarif, structure des ateliers et inscription à Walhain." name="description"/>
 <meta content="tarif stage jeu vidéo, prix académie esport, inscription, informations pratiques, module 7 semaines" name="keywords"/>
-<link href="assets/css/styles.css" rel="stylesheet"/>
+
 <link href="assets/images/Ludus-Mentis-transparent.png" rel="icon" type="image/png"/>
 <script src="https://cdn.tailwindcss.com"></script><link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css"/><script defer="True" src="assets/js/i18n.js"></script></head>
 <body><a class="sr-only focus:not-sr-only focus:btn focus:btn-primary m-2" href="#main">Aller au contenu principal</a>
 <!-- Google Tag Manager (noscript) -->
-<noscript><iframe height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V" style="display:none;visibility:hidden" width="0"></iframe></noscript>
+<noscript><iframe class="" height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V" style="display:none;visibility:hidden" width="0"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 <div id="header"></div>
-<main class="container" id="main">
+<main class="container mx-auto px-4 py-8 space-y-8" id="main">
 <section class="section hero">
-<h1>Académie : Informations et Tarifs</h1>
-<p>Découvrez notre programme de modules thématiques conçus pour transformer la pratique du jeu vidéo en une véritable compétence de vie. Pour toute autre question, <a href="contact.html">n'hésitez pas à nous contacter</a>.</p>
+<h1 class="text-4xl md:text-5xl font-bold">Académie : Informations et Tarifs</h1>
+<p>Découvrez notre programme de modules thématiques conçus pour transformer la pratique du jeu vidéo en une véritable compétence de vie. Pour toute autre question, <a class="btn btn-primary" href="contact.html">n'hésitez pas à nous contacter</a>.</p>
 </section>
-<section class="section card">
-<h2>Structure de nos modules</h2>
+<section class="section card"><div class="card-body prose max-w-none">
+<h2 class="text-3xl font-bold mt-2">Structure de nos modules</h2>
 <ul>
 <li><strong>Format :</strong> Chaque module est un cycle complet de <strong>7 semaines</strong>.</li>
 <li><strong>Fréquence :</strong> Les ateliers durent <strong>2 heures</strong> et ont lieu une fois par semaine.</li>
 <li><strong>Pour qui :</strong> Les jeunes de 10 à 15 ans, prêts à découvrir le jeu sous un nouvel angle.</li>
 <li><strong>Objectif :</strong> Se concentrer sur un aspect clé de la performance et du bien-être, et explorer une large palette de jeux coopératifs.</li>
 </ul>
-</section>
-<section class="section card">
-<h2>Un module, un objectif</h2>
+</div></section>
+<section class="section card"><div class="card-body prose max-w-none">
+<h2 class="text-3xl font-bold mt-2">Un module, un objectif</h2>
 <p>Notre programme est découpé en modules thématiques. Chaque module de 7 semaines est une aventure en soi, centrée sur le développement d'une compétence spécifique à travers le jeu.</p>
 <p>Les thèmes abordés incluent, par exemple :</p>
 <ul>
@@ -43,13 +43,13 @@
 <li><strong>L'analyse :</strong> Savoir débriefer une partie pour en tirer des leçons concrètes.</li>
 </ul>
 <p>Cette approche permet à votre enfant non seulement de s'améliorer, mais aussi de découvrir une grande variété de jeux, chacun servant d'outil pour un apprentissage ciblé.</p>
-</section>
-<section class="section card" style="text-align:center;">
-<h2>Tarif et Inscription</h2>
-<p style="font-size: 1.5em; font-weight: 600; color: var(--clr-accent-dark); margin-bottom: 0.5em;">230 € par module</p>
+</div></section>
+<section class="section card text-center"><div class="card-body prose max-w-none">
+<h2 class="text-3xl font-bold mt-2">Tarif et Inscription</h2>
+<p class="" style="font-size: 1.5em; font-weight: 600; color: var(--clr-accent-dark); margin-bottom: 0.5em;">230 € par module</p>
 <p>Ce tarif unique comprend les 7 ateliers de 2 heures, l'encadrement, l'accès à tout le matériel et l'assurance.</p>
-<a class="btn btn-primary" href="contact.html" style="margin-top: 1.5em;">Demander les dates du prochain module</a>
-</section>
+<a class="btn btn-primary mt-4" href="contact.html">Demander les dates du prochain module</a>
+</div></section>
 </main>
 <div id="footer"></div>
 <script src="assets/js/include.js"></script>
