--- a/mentions.html
+++ b/mentions.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
-<html lang="fr" data-theme="autumn">
+
+<html data-theme="autumn" lang="fr">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Mentions légales - Ludus Mentis</title>
-<link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
+<link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css"/>
 <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
 <div id="header"></div>
-<main id="main" class="container mx-auto px-4 py-8 prose max-w-none">
-<h1>Mentions légales</h1>
+<main class="container mx-auto px-4 py-8 prose max-w-none space-y-8" id="main">
+<h1 class="text-4xl md:text-5xl font-bold">Mentions légales</h1>
 <p>Mentions légales pour Ludus Mentis. Voir informations d'éditeur, hébergeur, propriété intellectuelle et contact.</p>
 </main>
 <div id="footer"></div>
 <script src="assets/js/include.js"></script>
-<script src="assets/js/cookie-consent.js" defer></script>
-<script src="assets/js/i18n.js" defer></script>
+<script defer="" src="assets/js/cookie-consent.js"></script>
+<script defer="" src="assets/js/i18n.js"></script>
 </body>
 </html>
