--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
       "areaServed": "Belgique"
     }
     </script>
-
 <link href="assets/images/Ludus-Mentis-transparent.png" rel="icon" type="image/png"/>
 <script src="https://cdn.tailwindcss.com"></script><link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css"/><script defer="True" src="assets/js/i18n.js"></script></head>
 <body><a class="sr-only focus:not-sr-only focus:btn focus:btn-primary m-2" href="#main">Aller au contenu principal</a>
@@ -83,8 +82,8 @@
 <p class="text-center mt-8"><a class="btn btn-primary btn-lg" href="academie.html">Découvrir notre académie</a></p>
 </div></section>
 <section class="section card text-center"><div class="card-body prose max-w-none">
-<h2 class="text-3xl font-bold mt-2">Des questions ? parlons-en !</h2>
-<p><a href="faq.html">consultez notre faq</a> ou <a class="btn btn-primary" href="contact.html">contactez-nous directement</a>.<br/>
+<h2 class="text-3xl font-bold mt-2">Des questions ? Parlons-en !</h2>
+<p><a href="faq.html">consultez notre FAQ</a> ou <a class="btn btn-primary" href="contact.html">contactez-nous directement</a>.<br/>
     nous répondons à toutes vos préoccupations de parent.</p>
 </div></section>
 </main>
