--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 <noscript><iframe class="" height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V" style="display:none;visibility:hidden" width="0"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 <div id="header"></div>
-<main class="container mx-auto px-4 py-8 space-y-8" id="main">
+<main class="container mx-auto px-4 py-8 space-y-8 space-y-12" id="main">
 <section class="section hero">
 <img alt="Logo Ludus Mentis" class="" decoding="async" loading="lazy" src="assets/images/Ludus-Mentis-transparent.png" style="max-width:120px; margin-bottom:1em"/>
-<h1 class="text-4xl md:text-5xl font-bold">Et si le jeu vidéo aidait votre enfant à grandir ?</h1>
-<p>Chez Ludus Mentis, nous transformons la passion du jeu vidéo en un puissant outil de développement personnel. Grâce à notre approche pédagogique unique, votre enfant apprend la communication, la gestion des émotions et l'esprit d’équipe. Pour s'épanouir à l'écran, comme dans la vie de tous les jours.</p>
+
+
 </section>
 <section class="section card" id="concept"><div class="card-body prose max-w-none">
 <h2 class="text-3xl font-bold mt-2">Des compétences humaines pour le 21<sup>e</sup> siècle</h2>
